fix: Changed size and spacing for blog layout

--- a/src/components/common/Container/Container.module.scss
+++ b/src/components/common/Container/Container.module.scss
@@ -6,3 +6,7 @@
 .container.large {
   --contentWidth: 1232px;
 }
+
+.container.small {
+  --contentWidth: 680px;
+}
