--- a/src/templates/long-form-content.module.scss
+++ b/src/templates/long-form-content.module.scss
@@ -6,15 +6,15 @@
 }
 
 .title {
-  font-size: 2.75rem;
+  font-size: 4rem;
   font-family: v('ff-mono');
 
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
 }
 
 .content {
   * {
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
   }
 
   @for $index from 1 through 6 {
@@ -22,25 +22,29 @@
       font-family: v('ff-mono');
       font-weight: v('bold');
 
-      margin-top: 4rem;
+      margin-bottom: 2rem;
     }
   }
 
   h1 {
-    font-size: 2.25rem;
+    font-size: 4rem;
   }
   h2 {
-    font-size: 2rem;
+    font-size: 3.75rem;
   }
 
-  @for $index from 3 through 6 {
+  h3 {
+    font-size: 3rem;
+  }
+
+  @for $index from 4 through 6 {
     h#{$index} {
-      font-size: 1.85rem;
+      font-size: 2.75rem;
     }
   }
 
   p {
-    font-size: 1.85rem;
+    font-size: 2.6rem;
   }
 
   ul,
@@ -49,10 +53,10 @@
       margin: 0;
       padding: 0;
 
-      font-size: 1.85rem;
+      font-size: 2.6rem;
 
       + li {
-        margin-top: 2rem;
+        margin-top: 1rem;
       }
     }
   }
@@ -63,7 +67,7 @@
 
     li {
       &::marker {
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: v('semi');
         color: v('brand-fire');
       }
@@ -120,7 +124,7 @@
     }
 
     p {
-      font-size: 1.85rem;
+      font-size: 2.6rem;
       margin-bottom: 0;
     }
   }
